got the form to work

--- a/client/src/styles/Form.module.scss
+++ b/client/src/styles/Form.module.scss
@@ -1,8 +1,10 @@
-.main {
-  .form {
-    .fieldset {
-      .legend {}
-      .submitButton {}
-    }
-  }
-}
+// .main {
+//   .form {
+//     .fieldset {
+//       .legend {
+//       }
+//       .submitButton {
+//       }
+//     }
+//   }
+// }
